<resources>
    <string name="app_name">Lee Sin</string>
    <string name="action_settings">Settings</string>
    <string name="action_shopping">shopping</string>
    <string name="genresTitle_text">Music Genres</string>
    <string name="genresFootnote_text">Life is a journey through a desert and music is the oasis.</string>
    <string name="classical_text">Classical</string>
    <string name="blues_text">Blues</string>
    <string name="jazz_text">Jazz</string>
    <string name="rock_text">Rock</string>
    <string name="nowPlaying_text">Now Playing…</string>
    <string name="playButton_description">playButton</string>

</resources>
