<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/genresTitle"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@android:color/darker_gray"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/genresTitle_text"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="cursive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/genresFootnote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genresTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/genresClassical"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/colorClassical"
                android:gravity="center_vertical"
                android:onClick="onClassicalClick"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/classical_text"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/genresBlues"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/colorBlues"
                android:gravity="center_vertical"
                android:onClick="onBluesClick"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/blues_text"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/genresJazz"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/colorJazz"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/jazz_text"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/genresRock"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/colorRock"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/rock_text"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/genresFootnote"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/colorPrimary"
        android:paddingLeft="25dp"
        android:paddingStart="25dp"
        android:paddingTop="15dp"
        android:paddingRight="90dp"
        android:paddingEnd="90dp"
        android:text="@string/genresFootnote_text"
        android:textColor="@color/colorFootnote"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:fontFamily="casual"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
 />

</android.support.constraint.ConstraintLayout>